Fixed text alignment issue

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h4 {
 p {
 	font-size: 110%;
 	line-height: 150%;
-	text-align: justify;
+	text-align: left;
 	padding: 0 3%;
 }
 
